# CMake-template

./: CMakeLists.txt  README.md
cmake/: mylibraryConfig.cmake.in
src/: CMakeLists.txt  mylibrary.cpp
test/: CMakeLists.txt
usage/: .gitignore  CMakeLists.txt  main.cpp
